add translate engine selection in back-end and add language selection dropdown in front-end

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -2,5 +2,6 @@
     "Documentation":"Dokumentation",
     "Laracasts":"Laravel Webcast",
     "Laravel News":"Laravel Nachrichten",
+    "Select language":"Sprache auswählen",
     "Vibrant Ecosystem":"Lebendiges Ökosystem"
 }
