--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -2,5 +2,6 @@
     "Documentation":"Documentation",
     "Laracasts":"Laravel Webémission",
     "Laravel News":"Laravel Nouvelles",
+    "Select language":"Choisir la langue",
     "Vibrant Ecosystem":"Écosystème dynamique"
 }
