--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -2,5 +2,6 @@
     "Documentation":"Documentation",
     "Laracasts":"Laracasts",
     "Laravel News":"Laravel News",
+    "Select language":"Select language",
     "Vibrant Ecosystem":"Vibrant Ecosystem"
 }
