--- a/resources/lang/jp.json
+++ b/resources/lang/jp.json
@@ -2,5 +2,6 @@
     "Documentation":"ドキュメンテーション",
     "Laracasts":"Laravelウェブキャスト",
     "Laravel News":"Laravelニュース",
+    "Select language":"言語を選択する",
     "Vibrant Ecosystem":"活気のある生態系"
 }
